css/main.scss
---
---
@import url('https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic');

$items: 3;
$transition-duration: 0.5s;
$transition-delay: 0.05s;

* {
  box-sizing: border-box;
}

html, body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
}

body {
  background: #2B3E50;
}

.nav {
  display: flex;
  justify-content: space-between;
  height: 30px;
  margin: 50px 30%;
}

a {
  color: #ffffe5;
  text-decoration: none;
}

.hero {
  display: flex;
  height: 300px;
  justify-content: center;
}

.footer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 10px;
  grid-auto-rows: minmax(100px, auto);
}

.footer_fire {
  grid-column: 1;
  grid-row: 1/3;
}

.footer_collab {
  font-size: 36px;
  color: #ffa000;
  grid-column: 2/4;
  grid-row: 1;
}

.footer_social {
  display: flex;
  flex-direction: column;
  grid-column: 2/4;
  grid-row: 2;
  color: #ffa000;
}
.footer_nav {
  display: flex;
  grid-column: 1/4;
  grid-row: 3;
}

.content {
  grid-area: content;
  background: #ffffe5;
  padding: 10px;
}

.blog {
  font-family: Roboto;
  font-weight: lighter;
  border-radius: 12px;
}

.blog * {
  padding: 0 20px;
}

.blog__title {
  padding-top: 50px;
  font-size: 250%;
  font-family: Roboto;
  font-weight: lighter;
  text-align: center;
  margin-bottom: 50px;
}

.blog__text {
  text-align: left;
  padding-bottom: 50px;
}

.card {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: auto;
}

.blog__author {
  width: 100%;
  margin:auto;
  background-color: #faf6ec;
  display: flex;
  text-align: center;
  align-items: center;
  vertical-align: middle;
  z-index: 1000;
}

.button {
    font-family: Roboto;
    width: 60%;
    margin: auto;
    border: none;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    z-index: 2;
    cursor: pointer;
}

.button:hover {
  color: white;
  border: 1px solid #4d4d4d;
  background-color: #000010;
}


.superegg {

}


.post {
  width:100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-bottom: 10px;
}

.preview {
  min-height: 55px;
  max-height: 100px;
  background-color: #ffecb3;
  width:100%;
  display: flex;
  flex-direction: row;
  z-index: 1000;
  align-items: center;
  text-align: center;
  vertical-align: middle;
}

.preview * {
  height: 100%;
  vertical-align: middle;
}

.preview__image:before {
  padding-bottom: 100%;
}

.preview__image {
  display: none;
}

.preview__blurb {
  margin-left: 30px;
  vertical-align: middle;
  text-align: left;
}

.text {
  font-family: 'Roboto';
  color: black;
  text-decoration: none;
  width: 100%;
  background-color: #ffecb3;
}

.text * {
  margin-left: 25px;
}

.posts {
  padding-left: 0;
}

.employee {
  width: 100%;
  padding: 25px 0;
  display: flex;
  flex-direction: row;
}

.employee:nth-of-type(even){
  flex-direction: row-reverse;
}

.employee__photo {
  height: 220px;
  max-height: none;
  width: 30%;
  max-width: 220px;
  margin-right: 10px;
  margin-left: 10px;
  position: relative;
  display: flex;
  flex-direction: column;
  border-radius: 20%/20%;
  z-index: 1000;
}

.employee__text {
  display: flex;
  flex-direction: column;
  text-align: center;
  margin: auto;
}

.employee_bio {
  width: auto;
  display: flex;
  align-items: center;
  line-height: 100%;
  border-radius: 12px;
  height: 220px;
  z-index: 1000;
}

@keyframes reveal-text {
	from {
		clip-path: inset(0 100% 0 0);
	}
	to {
		clip-path: inset(0 0 0 0);
	}
}


@keyframes revealer-text {

	0%, 50% {
		transform-origin: 0 50%;
	}

	60%, 100% {
		transform-origin: 100% 50%;
	}


	60% {
		transform: scaleX(1);
	}

	100% {
		transform: scaleX(0);
	}
}

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

@media (min-width: 1100px) {
  body {
    grid-template-rows: 70vh auto auto auto;
    grid-template-areas: // serve mobile to everybody until we have a better solution
      "hero hero"
      "sidebar sidebar"
      "content content"
      "footer footer"
  }

  .button {
      font-family: Roboto;
      width: 30%;
      margin: auto;
      border: none;
      padding: 15px 32px;
      text-align: center;
      text-decoration: none;
      z-index: 2;
      cursor: pointer;
  }

  .posts{
    flex-direction: column;
    width: 100%;
  }

  .post {
    flex-direction: row;

  }

  .post:nth-of-type(even){
    flex-direction: row-reverse;
  }

  .preview {
    height: 220px;
    max-height: none;
    width: 30%;
    max-width: 220px;
    margin-right: 10px;
    margin-left: 10px;
    position: relative;
    display: flex;
    flex-direction: column;
    border-radius: 20%/20%;
    z-index: 1000;
  }

  .preview::before {
    border-radius: 2%/30%;
  }

  .preview::after {
    border-radius: 30%/2%;
  }

  .preview__image {
    display: block;
    height: 60%;
    padding-top: 8px;
    padding-bottom: 8px;
  }

  .preview__blurb {
    text-align: center;
    margin: auto;
  }

  .text {
    width: auto;
    display: flex;
    align-items: center;
    line-height: 100%;
    border-radius: 12px;
    height: 220px;
    z-index: 1000;
  }

  .superegg {
      width:220px;
      height:220px;
      border-radius:20%/20%;
      background-color: #faf6ec;
      position:relative;
      z-index: 3
  }

  .superegg::before, .superegg::after {
      content:'';
      position:absolute;
      z-index:-1;
  }

  .superegg::before {
      border-radius: 2%/30%;
      top: 33px;
      bottom: 33px;
      right: -2px;
      left: -2px;
  }

  .superegg::after {
      border-radius: 30%/2%;
      left: 33px;
      right: 33px;
      top: -2px;
      bottom: -2px;
  }

  .employee {
    width: 60%;
  }
}

